1) Repair modal alignment, make rounded corner 2) Realign language selector, send to bottom instead

--- a/src/components/LanguageSelector/languageSelector.module.css
+++ b/src/components/LanguageSelector/languageSelector.module.css
@@ -1,6 +1,10 @@
 .container {
 	background: var(--main-black);
 	padding: 14px 0;
+	position: absolute;
+	left: 0;
+	right: 0;
+	bottom: 0;
 }
 .container ul {
 	display: flex;
