--- a/src/components/Modal/modal.module.css
+++ b/src/components/Modal/modal.module.css
@@ -1,7 +1,7 @@
 /* @import './popup.module.less'; */
 
 /* Popup Start */
-.popup {
+/* .popup {
 	position: fixed;
 	width: 100%;
 	height: 100%;
@@ -20,7 +20,7 @@
 	bottom: 25%;
 	margin: auto;
 	background: var(--main-white);
-}
+} */
 
 /* Start Popup.less */
 /* @-webkit-keyframes float {
@@ -79,7 +79,7 @@
 		transform: translatex(0px);
 	}
 } */
-.popUp2 {
+/* .popUp2 {
 	background: var(--main-black);
 	border-radius: 0.1875rem;
 	cursor: default;
@@ -91,8 +91,9 @@
 	right: 0;
 	text-transform: none;
 	z-index: 9000;
-}
+} */
 .modal {
+	border-radius: 10px;
 	position: absolute;
 	top: 50%;
 	left: 50%;
@@ -118,14 +119,18 @@
 	width: 100%;
 	max-width: 900px;
 	overflow: hidden;
-	text-align: center;
+	/* text-align: center; */
 	position: relative;
 	line-height: 1.4rem;
 	/* min-height: 100vh; */
 }
 .modal .content .container {
-	/* padding: 100px 20px 140px; */
-	padding: 60px 40px;
+	/* background: yellow;
+	padding: 100px 20px 140px;
+	margin: 40px 20px; */
+	margin: 60px 20px;
+	max-height: calc(80vh - 10em);
+	overflow-y: auto;
 }
 /* .modal .content .close {
 	position: absolute;
@@ -170,11 +175,12 @@
 	.modal .content {
 		min-height: inherit;
 	}
-	.modal .content .container {
+	/* .modal .content .container {
+		background: blue;
 		padding: 70px 0 90px;
 		max-width: 820px;
 		margin: 0 auto;
-	}
+	} */
 	.modal .content .dots .dot:nth-of-type(1) {
 		top: -190px;
 		right: -190px;
@@ -193,12 +199,13 @@
 		width: 25%;
 	}
 }
-@media (min-width: 568px) {
+/* @media (min-width: 568px) {
 	.modal .content .container {
-		/* padding: 50px 20px 80px; */
+		padding: 50px 20px 80px;
+		background: red;
 		padding: 50px 20px;
 	}
-}
+} */
 
 .bounceIn {
 	animation-name: bounceIn;
